--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rifuu Github</title>
+    <link rel="icon" href="https://avatars.githubusercontent.com/u/110101954?v=4" type="image/x-icon">
 </head>
 <body>
     <h1>Haloooo</h1>
