--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Rifu's Space</title>
-		<link
-			rel="icon"
-			href="https://avatars.githubusercontent.com/u/110101954?v=4"
-			type="image/x-icon"
-		/>
+		<link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" />
 		<link
 			href="https://cdn.jsdelivr.net/npm/daisyui@4.12.2/dist/full.min.css"
 			rel="stylesheet"
@@ -71,18 +67,28 @@
 				</div>
 			</div>
 		</div>
-		<div class="container mx-auto text-center">
-			<div class="avatar">
-				<div class="w-25 rounded-full">
-					<img
-						alt="icon"
-						src="https://avatars.githubusercontent.com/u/110101954?v=4"
-					/>
+
+		<div class="hero min-h-screen">
+			<div class="hero-overlay bg-opacity-60"></div>
+			<div class="hero-content text-center text-neutral-content">
+				<div class="avatar">
+					<div class="w-25 rounded-full">
+						<img
+							alt="icon"
+							src="https://avatars.githubusercontent.com/u/110101954?v=4"
+						/>
+					</div>
+				</div>
+				<div class="max-w-md">
+					<h1 class="mb-5 text-5xl font-bold">Hello there</h1>
+					<p class="mb-5">
+						Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda
+						excepturi exercitationem quasi. In deleniti eaque aut repudiandae et
+						a id nisi.
+					</p>
 				</div>
 			</div>
-			<h1>heloo</h1>
 		</div>
-
 		<footer class="footer items-center p-4 bg-neutral text-neutral-content">
 			<aside class="items-center grid-flow-col">
 				<p>Copyright © 2024 - All right reserved</p>
@@ -116,7 +122,7 @@
 				></a>
 			</nav>
 		</footer>
-        
+
 		<script src="assets/script.js"></script>
 	</body>
 </html>
