--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 						<li>
 							<a href="https://github.com/Rifuuwu/CTF_Archive">CTF Archive</a>
 						</li>
-						<li><a href="assets/pages/project.html">Project</a></li>
+						<li><a href="project.html">Project</a></li>
 					</ul>
 				</div>
 			</div>
