--- a/project.html
+++ b/project.html
@@ -16,23 +16,9 @@
 
         <div class="navbar bg-base-100">
 			<div class="flex-1">
-				<a class="btn btn-ghost text-xl">Rifu's Space</a>
+				<a class="btn btn-ghost text-xl" href="index.html">Rifu's Space</a>
 			</div>
 			<div class="flex-none gap-2">
-				<input
-					type="checkbox"
-					class="toggle toggle-info"
-					checked
-					onclick="theme()"
-				/>
-				<div class="form-control">
-					<input
-						type="text"
-						placeholder="Search"
-						class="input input-bordered w-24 md:w-auto"
-						id="search"
-					/>
-				</div>
 				<div class="dropdown dropdown-end">
 					<div
 						tabindex="0"
@@ -63,17 +49,17 @@
 						<li>
 							<a href="https://github.com/Rifuuwu/CTF_Archive">CTF Archive</a>
 						</li>
-						<li><a href="project.html">Project</a></li>
+						<li><a href="#">Project</a></li>
 					</ul>
 				</div>
 			</div>
 		</div>
 
-        <div class="container min-h-screen text-center ">
+        <div class="container min-h-screen min-w-full px-5 text-center ">
 			<h1 class="mb-5 text-5xl font-bold">My Projects</h1>
 			<div class="container flex flex-row gap-5">
 
-				<div class="card card-compact w-96 bg-base-secondary shadow-xl">
+				<div class="card card-compact w-96 bg-primary-content text-content shadow-xl">
 					<figure><img src="assets/images/quiz.png" alt="Quizineering" /></figure>
 					<div class="card-body">
 					<h2 class="card-title">Quizineering</h2>
@@ -83,7 +69,7 @@
 					</div>
 					</div>
 				</div>
-				<div class="card card-compact w-96 bg-base-primary shadow-xl">
+				<div class="card card-compact w-96 bg-primary-content text-content shadow-xl">
 					<figure><img src="assets/images/pois.png" alt="Poisson" /></figure>
 					<div class="card-body">
 					<h2 class="card-title">Poisson Distribution Calculator</h2>
